[gd_scene load_steps=5 format=3 uid="uid://b2lxuj4h4oeth"]

[ext_resource type="Script" uid="uid://bvo7qw7l6fv5d" path="res://magnet/magnet.gd" id="1_gwujs"]

[sub_resource type="Gradient" id="Gradient_lshss"]
interpolation_mode = 1
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ddqi3"]
gradient = SubResource("Gradient_lshss")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_p1ktd"]
radius = 50.0

[node name="Magnet" type="Node2D"]
script = ExtResource("1_gwujs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_ddqi3")

[node name="MagnetRange" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Collider" type="CollisionShape2D" parent="MagnetRange"]
shape = SubResource("CircleShape2D_p1ktd")

[connection signal="area_entered" from="MagnetRange" to="." method="_on_range_entered"]
[connection signal="area_exited" from="MagnetRange" to="." method="_on_range_exited"]
